Update to MC 1.18, Java 17